--- a/requirements.txt
+++ b/requirements.txt
@@ -108,8 +108,9 @@ transformers==4.42.4
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
-unstructured==0.15.0
-unstructured-client==0.24.1
+unstructured==0.15.5
+unstructured-client==0.25.5
+unstructured-ingest==0.0.4
 urllib3==2.2.2
 wrapt==1.16.0
 yarl==1.9.4
